--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -39,6 +39,10 @@
                         &#xA0;<span translate="global.menu.entities.legalEntity">Legal entity</span></a></li>
                         <li ui-sref-active="active" ><a ui-sref="curriculum" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
                         &#xA0;<span translate="global.menu.entities.curriculum">Curriculum</span></a></li>
+                        <li ui-sref-active="active" ><a ui-sref="ability" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
+                        &#xA0;<span translate="global.menu.entities.ability">Ability</span></a></li>
+                        <li ui-sref-active="active" ><a ui-sref="tag" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
+                        &#xA0;<span translate="global.menu.entities.tag">Tag</span></a></li>
                         <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here -->
                     </ul>
                 </li>
