FIX: Changed Disponibility to Availability
Fixed the spell error in Disponibility.

--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -49,8 +49,10 @@
                         &#xA0;<span translate="global.menu.entities.need">Need</span></a></li>
                         <li ui-sref-active="active" ><a ui-sref="neededAbility" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
                         &#xA0;<span translate="global.menu.entities.neededAbility">Needed ability</span></a></li>
-                        <li ui-sref-active="active" ><a ui-sref="disponibility" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
-                        &#xA0;<span translate="global.menu.entities.disponibility">Disponibility</span></a></li>
+                        <li ui-sref-active="active"><a ui-sref="availability" data-toggle="collapse"
+                                                       data-target=".navbar-collapse.in"><span
+                            class="glyphicon glyphicon-asterisk"></span>
+                            &#xA0;<span translate="global.menu.entities.availability">Availability</span></a></li>
                         <li ui-sref-active="active" ><a ui-sref="assessment" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
                         &#xA0;<span translate="global.menu.entities.assessment">Assessment</span></a></li>
                         <li ui-sref-active="active" ><a ui-sref="payment" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
