--- a/src/main/webapp/app/layouts/navbar/navbar.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.html
@@ -57,6 +57,11 @@
                         &#xA0;<span translate="global.menu.entities.assessment">Assessment</span></a></li>
                         <li ui-sref-active="active" ><a ui-sref="payment" data-toggle="collapse" data-target=".navbar-collapse.in"><span class="glyphicon glyphicon-asterisk"></span>
                         &#xA0;<span translate="global.menu.entities.payment">Payment</span></a></li>
+                        <li ui-sref-active="active"><a ui-sref="natural-person-form" data-toggle="collapse"
+                                                       data-target=".navbar-collapse.in"><span
+                            class="glyphicon glyphicon-asterisk"></span>
+                            &#xA0;<span
+                                translate="global.menu.entities.naturalPersonForm">Natural Person Form</span></a></li>
                         <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here -->
                     </ul>
                 </li>
